--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,12 @@ spring:
     password: 1234
 
   jpa:
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
         format_sql: true
-        ddl-auto: create
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
 logging:
@@ -23,4 +24,3 @@ logging:
         type:
           descriptor:
             sql: trace
-
